--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <body>
         <Div>
             <div  id="header">
-                <h1>Today is Nick's birthday 🎉</h1>
+                <h1>Today is Segun's birthday 🎉</h1>
                 <img id="avatar" src="images/myprofilepic.jpg" alt="Nick's headshot with a smiling face">
-                <h2 id="bday-age">24 years old</h2>
-                <h4 id="bday-date">01.11.2022</h4>
+                <h2 id="bday-age">+ 1 years old</h2>
+                <h4 id="bday-date">04.01.2023</h4>
             </div>
             <div class="gift-section">
                 <h2 class="line1">Here's how happy i am for you today 🥳</h2>
