--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <Div>
             <div  id="header">
-                <h1>Today is Segun's birthday 🎉</h1>
+                <h1>Today is Segun Adeleke's birthday 🎉</h1>
                 <img id="avatar" src="images/myprofilepic.jpg" alt="Nick's headshot with a smiling face">
                 <h2 id="bday-age">+ 1 years old</h2>
                 <h4 id="bday-date">04.01.2023</h4>
